# ffs-levenshtein-automaton

./: CMakeLists.txt
lib/: catch.hpp
src/: bit_vector.cpp  bit_vector.h  node_minimal.h  parametrized_state.cpp  parametrized_state.h  position.cpp  position.h  state.cpp  state.h  trie.h
src/trie/: depth_first_iterator.h  node.h
test/: test_bit_vector.cpp  test_parametrized_state.cpp  test_position.cpp  test_state.cpp  test_trie.cpp
